--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,11 +14,11 @@
         "ghcr.io/thediveo/devcontainer-features/go-mod-upgrade:0": {},
         "ghcr.io/thediveo/devcontainer-features/lazygit:0": {},
         "ghcr.io/thediveo/devcontainer-features/gocover:0": {
-            "root": true,           // test both as ordinary user and root
-            "num-programs": "1",    // do never run package-level tests in parallel
-            "race": true,           // enable race detector
+            "root": true, // test both as ordinary user and root
+            "num-programs": "1", // do never run package-level tests in parallel
+            "race": true, // enable race detector
             "verbose": true,
-            "html": true            // generate coverage.html
+            "html": true // generate coverage.html
         },
         "ghcr.io/thediveo/devcontainer-features/pin-github-action:0": {}
     },
@@ -27,6 +27,7 @@
         "GOPATH": "/home/vscode/go",
         "PATH": "/home/vscode/go/bin:/go/bin:/usr/local/go/bin:${localEnv:PATH}"
     },
+    "postCreateCommand": "echo 'Defaults:vscode secure_path = \"/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin\"' | sudo tee -a /etc/sudoers.d/vscode",
     "customizations": {
         "vscode": {
             "extensions": [
