--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,17 @@
         "GOPATH": "/home/vscode/go",
         "PATH": "/home/vscode/go/bin:/go/bin:/usr/local/go/bin:${localEnv:PATH}"
     },
-    "postCreateCommand": "echo 'Defaults:vscode secure_path = \"/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin\"' | sudo tee -a /etc/sudoers.d/vscode",
+    "postCreateCommand": {
+        "go-for-root": "echo 'Defaults:vscode secure_path = \"/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin\"' | sudo tee -a /etc/sudoers.d/vscode",
+        // considering the enormous noise made by the user namespace proponents
+        // it breaks any existing and future irony meter that the same
+        // distributions pushing user namespaces down our throats are now doing
+        // whacky disabling "fixes" because of ... "security". It is only
+        // natural that the people involved don't want to own the mess they've
+        // made and even double down with more broken band-aids.
+        "crapparmor": "echo 0 | sudo tee -a /proc/sys/kernel/apparmor_restrict_unprivileged_userns",
+        "cargo-culture": "echo 1 | sudo tee -a /proc/sys/kernel/unprivileged_userns_clone"
+    },
     "customizations": {
         "vscode": {
             "extensions": [
